--- a/public/signup.html
+++ b/public/signup.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 align="center">Signup</h1>
+    <h1>Signup</h1>
     <form action="/senddata" method="POST" align="center" class="main">
         Enter First Name: <input name="firstname" type="text" placeholder="First Name" class="fields" required><br>
         Enter Last Name: <input name="lastname" type="text" placeholder="Last Name" class="fields" required><br>
@@ -22,5 +22,8 @@
         Repeat password: <input name="confirmpassword" type="password" placeholder="password" class="fields" required><br>
         <button class="btn btn-primary signup">Signup</button>
     </form>
+    <footer class="foot">
+        Designed and Built by <b>Aaron Nazareth</b>
+    </footer>
 </body>
 </html>
