--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,9 @@
             <button class="btn btn-primary">signup</button>
         </form>
     </div>
-    <footer></footer>
+    <footer class="foot">
+        Designed and Built by <b>Aaron Nazareth</b>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
