--- a/public/index.html
+++ b/public/index.html
@@ -5,22 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../bootstrap-5.2.0-dist/css/bootstrap.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css" />
     <title>Document</title>
 </head>
 <body>
-    <h1 class="heading"><strong>Login Portal</strong></h1>
+    <h1 class="main_heading">Pic Uploader</h1>
     <br>
     <div id="logbg">
-        <h3>Login details</h3><br>
+        <h2><b>Login</b></h2><br>
         <form action="/send" method="POST">
-            <div class="fields">*Enter Email id: </div><input type="email" required placeholder="xyz@gmail.com" class="input1" name="email"><br>
-            <div class="fields">*password: </div><input type="password" required placeholder="password" class="input2" name="password"><br>
+            <input type="email" required placeholder="  &#xf0e0; Email" class="input1" name="email"><br>
+            <input type="password" required placeholder="  &#xf023; Password" class="input1" name="password"><br>
             <button class="button btn btn-primary">Login</button><br>
         </form>
         <form action="/signup" method="POST">
-            <button class="su btn btn-primary">Signup</button>
+            <button class="fp btn">Signup</button>
         </form>
         <form action="/forpass" method="POST">
             <button class="fp btn" name="forgotpassword">Forgot Password?</button><br>
