--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,9 @@
 </head>
 <body>
     <h1 class="main_heading">Pic Uploader</h1>
+    <form action="/signup" method="POST">
+        <button class="signup btn">Register</button>
+    </form>
     <br>
     <div id="logbg">
         <h2><b>Login</b></h2><br>
@@ -19,9 +22,6 @@
             <input type="email" required placeholder="  &#xf0e0; Email" class="input1" name="email"><br>
             <input type="password" required placeholder="  &#xf023; Password" class="input1" name="password"><br>
             <button class="button btn btn-primary">Login</button><br>
-        </form>
-        <form action="/signup" method="POST">
-            <button class="fp btn">Signup</button>
         </form>
         <form action="/forpass" method="POST">
             <button class="fp btn" name="forgotpassword">Forgot Password?</button><br>
