--- a/public/signup.html
+++ b/public/signup.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <h1>Signup</h1>
-    <div class="main">
-        <form action="/senddata" method="POST" align="center">
+    <div class="main" align="center">
+        <form action="/senddata" method="POST">
             Enter First Name*: <input name="firstname" type="text" placeholder="First Name" class="fields" required><br>
             Enter Last Name: <input name="lastname" type="text" placeholder="Last Name" class="fields"><br>
             Enter email*: <input name="email" type="email" placeholder="xyz@gmail.com" class="fields" required><br>
