--- a/public/sucess.html
+++ b/public/sucess.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="head">
-        <h2 class="head1">Pic Saver</h2>
+        <h2 class="head1">Pic Uploader</h2>
     </div>
     <div class="nav">
         <div><form method="POST" action="/contact"><Button class="links">Contact</button></form></div>
