--- a/public/fp.html
+++ b/public/fp.html
@@ -16,6 +16,9 @@
             <button class="button btn btn-primary" onclick="check">Submit</button>
         </form>
     </div>
+    <footer class="foot">
+        Designed and built by <b>Aaron Nazareth</b>
+    </footer>
     <script src="js/fp.js"></script>
 </body>
 </html>
