--- a/public/sucess.html
+++ b/public/sucess.html
@@ -15,6 +15,7 @@
     <div class="nav">
         <div><form method="POST" action="/contact"><Button class="links">Contact</button></form></div>
         <div><form method="POST" action="/pictures"><button class="links">My Pictures</button></form></div>
+        <div><form method="POST" action="/index"><button class="log links">Log Out</button></form></div>
     </div>
     <div class="main">
         <h2>Is your phone storage full? don't worry</h2>
