--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,12 @@
 </head>
 <body>
     <h1 class="main_heading">Pic Uploader</h1>
-    <form action="/signup" method="POST">
-        <button class="signup btn">Register</button>
-    </form>
+    <div class="headbutton">
+        <form action="/signup" method="POST">
+            <button class="signup btn">Contact</button>
+            <button class="signup btn">Register</button>
+        </form>
+    </div>
     <br>
     <div id="logbg">
         <h2><b>Login</b></h2><br>
