--- a/public/sucess.html
+++ b/public/sucess.html
@@ -13,9 +13,9 @@
         <h2 class="head1">Pic Uploader</h2>
     </div>
     <div class="nav">
-        <div><form method="POST" action="/contact"><Button class="links">Contact</button></form></div>
-        <div><form method="POST" action="/pictures"><button class="links">My Pictures</button></form></div>
-        <div><form method="POST" action="/index"><button class="log links">Log Out</button></form></div>
+        <form method="POST" action="/pictures"><button class="links">My Pictures</button></form>
+        <form method="POST" action="/index"><button class="links">Log Out</button></form>
+        <form method="POST" action="/contact"><Button class="links contact">Contact</button></form>
     </div>
     <div class="main">
         <h2>Is your phone storage full? don't worry</h2>
