--- a/public/contact.html
+++ b/public/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/99352e98c2.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../bootstrap-5.2.0-dist/css/bootstrap.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="css/contact.css">
@@ -23,6 +24,10 @@
     </div>
 
     <footer class="foot">
+        <i class="fa-brands fa-github"></i><a href="https://github.com/jevil25">jevil25</a>
+        <i class="fa-brands fa-instagram"></i><a href="https://www.instagram.com/aaron_naz25/">aaron_naz25</a>
+        <i class="fa-brands fa-linkedin"></i><a href="https://www.linkedin.com/in/aaron-nazareth-6580311b6/">Aaron Nazareth</a>
+        <i class="fa-regular fa-envelope"></i><a href="mailto:jevil257@gmail.com">jevil257@gmail.com</a><br>
         Designed and Built by <b>Aaron Nazareth</b>
     </footer>
 </body>
