--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../bootstrap-5.2.0-dist/css/bootstrap.css">
+    <script src="https://kit.fontawesome.com/99352e98c2.js" crossorigin="anonymous"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css" />
@@ -13,10 +14,8 @@
 <body>
     <h1 class="main_heading">Pic Uploader</h1>
     <div class="headbutton">
-        <form action="/signup" method="POST">
-            <button class="signup btn">Contact</button>
-            <button class="signup btn">Register</button>
-        </form>
+        <form action="/contact" method="POST"><button class="signup btn">Contact</button></form>
+        <form action="/signup" method="POST"><button class="signup btn">Register</button></form>
     </div>
     <br>
     <div id="logbg">
@@ -31,6 +30,10 @@
         </form>
     </div>
     <footer class="foot">
+        <i class="fa-brands fa-github"></i><a href="https://github.com/jevil25">jevil25</a>
+        <i class="fa-brands fa-instagram"></i><a href="https://www.instagram.com/aaron_naz25/">aaron_naz25</a>
+        <i class="fa-brands fa-linkedin"></i><a href="https://www.linkedin.com/in/aaron-nazareth-6580311b6/">Aaron Nazareth</a>
+        <i class="fa-regular fa-envelope"></i><a href="mailto:jevil257@gmail.com">jevil257@gmail.com</a><br>
         Designed and Built by <b>Aaron Nazareth</b>
     </footer>
 
