added password change feature and upload confirmation

--- a/public/signup.html
+++ b/public/signup.html
@@ -24,7 +24,9 @@
             </fieldset>
             <div class="text">Create password*: <input name="password" type="password" placeholder="password" class="fields" required></div><br>
             <div class="text">Repeat password*: <input name="confirmpassword" type="password" placeholder="password" class="fields" required></div><br>
+            <div class="text">Recovery code*: <input minlength="4" name="recoveryCode" type="password" placeholder="Recovery Code" class="fields" required></div><br>
             <div class="text"><button class="btn btn-primary signup">Signup</button></div>
+            <div class="note"><b>Note:</b> <div style="text-align:center">Never lose your recovery code.</div></div><br>
         </form>
     </div>
     <footer class="foot">
