--- a/public/fp.html
+++ b/public/fp.html
@@ -15,7 +15,8 @@
     <h1 class="rp">Recover password</h1>
     <div class="main">
         <form action="/check" method="POST" align="center">
-            Enter email: <input type="email" required placeholder="xyz@gmail.com" name="email" class="fields">
+            Enter email*: <input type="email" required placeholder="xyz@gmail.com" name="email" class="fields"><br>
+            Enter recovery code*: <input type="password" required placeholder="recovery code" name="recoveryCode" class="fields">
             <button class="button btn btn-primary" onclick="check">Submit</button>
         </form>
     </div>
