--- a/public/sucess.html
+++ b/public/sucess.html
@@ -29,9 +29,12 @@
                 <div class="col-4">
                 <input type="file" class="form-control" name="images" reqiuired multiple>
                 </div>
+                <div id="upload">
+                    Uploaded sucessfully!!!
+                </div>
                 <div class="submit-button">
                 <div class="col-2">
-                    <input type="submit" class="btn btn-warning" vaule="upload-images">
+                    <input type="submit" class="btn btn-warning" id="pressed" vaule="upload-images">
                 </div>
             </div>
             </div>
